--- a/Acciopus/Acciopus/Acciopus.csproj
+++ b/Acciopus/Acciopus/Acciopus.csproj
@@ -52,8 +52,14 @@
     <Compile Include="Acciopus.Designer.cs">
       <DependentUpon>Acciopus.cs</DependentUpon>
     </Compile>
+    <Compile Include="Config\Configuration.cs" />
+    <Compile Include="Config\Statements.cs" />
+    <Compile Include="Encryption\Encryption.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User\Login.cs" />
+    <Compile Include="User\Registration.cs" />
+    <Compile Include="User\User.cs" />
     <EmbeddedResource Include="Acciopus.resx">
       <DependentUpon>Acciopus.cs</DependentUpon>
     </EmbeddedResource>
@@ -84,10 +90,10 @@
     <None Include="Resources\background_test1.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\login1.png" />
+    <None Include="Resources\login2.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\login2.png" />
+    <None Include="Resources\signup1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
