--- a/Acciopus/Acciopus/Acciopus.csproj
+++ b/Acciopus/Acciopus/Acciopus.csproj
@@ -107,7 +107,10 @@
     <None Include="Resources\signup1.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\kullanicibg.png" />
+    <None Include="Resources\themecolor.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\kullanicibg1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
