--- a/Acciopus/Acciopus/Acciopus.csproj
+++ b/Acciopus/Acciopus/Acciopus.csproj
@@ -56,11 +56,11 @@
     <Compile Include="Config\Configuration.cs" />
     <Compile Include="Config\Statements.cs" />
     <Compile Include="Encryption\Encryption.cs" />
-    <Compile Include="Mainpanel.cs">
+    <Compile Include="WorkerPanel.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Mainpanel.Designer.cs">
-      <DependentUpon>Mainpanel.cs</DependentUpon>
+    <Compile Include="WorkerPanel.Designer.cs">
+      <DependentUpon>WorkerPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -71,8 +71,8 @@
     <EmbeddedResource Include="Acciopus.resx">
       <DependentUpon>Acciopus.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Mainpanel.resx">
-      <DependentUpon>Mainpanel.cs</DependentUpon>
+    <EmbeddedResource Include="WorkerPanel.resx">
+      <DependentUpon>WorkerPanel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
