overloaded filldatagrid func

--- a/Acciopus/Acciopus/Acciopus.csproj
+++ b/Acciopus/Acciopus/Acciopus.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Config\Statements.cs" />
     <Compile Include="Encryption\Encryption.cs" />
     <Compile Include="User\Request.cs" />
+    <Compile Include="WorkerPanelForms\DataGridViewFunctions.cs" />
     <Compile Include="WorkerPanelForms\RequestJob.cs">
       <SubType>Form</SubType>
     </Compile>
